static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Roboto&display=swap');

/* General styles */

:root {
    --green: hsl(135, 100%, 25%);
    --yellow: hsl(47.5,100%,51%);
    --orange: hsl(17, 100%, 56%);
    --orange-opacity: rgba(216, 82, 21, 0.7);
    --mid-opacity: rgba(0, 0, 0, 0.5);
    --deep-opacity: rgba(0, 0, 0, 0.8);
}

a {
    transition: all 0.3s;
}

body {
    font-family: 'Roboto', sans-serif;
    box-sizing: border-box;
    background-image: url("https://res.cloudinary.com/dyg53cwvw/image/upload/v1666646929/media/adults_returning_to_base_prduh4.jpg");
    min-height: 90vh;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 100vh;
    max-width: 100%;
    overflow-x: hidden;
}

:is(h1, h2, h3, h4, h5, h6) {
    font-family: 'Black Ops One', cursive;
    text-shadow: 2px 2px 0px rgba(255,203,5,0.7);
}

.heading {
    color: var(--green);
}

.sub-heading {
    color: var(--yellow);
}

.fade-up {
    animation: fade-up 1s ease-in-out;
}

.faded {
    opacity: 0;
}

.shrink {
    transform: scaleX(0);
}

.grow-in-left {
    animation: scale-left-to-right 1s ease-in-out;
}

/* Component Styles */

.btn {
    background-color: var(--green);
    color: black;
    box-shadow: 4px 3px 4px rgba(255,255,255,0.2),
        6px 5px 4px rgba(0,0,0,0.7);
}

.btn:hover {
    background-color: var(--yellow);
    box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5), 
           inset 2px 2px 4px rgba(70, 70, 70, 0.12);
    -webkit-transition: background-color 500ms linear;
    -ms-transition: background-color 500ms linear;
    transition: background-color 500ms linear;
    color: black;
}

.text-container {
    background-color: var(--deep-opacity);
    border-radius: 20px;
    box-shadow: 4px 3px 4px rgba(255,255,255,0.2),
        6px 5px 4px rgba(0,0,0,0.7);
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    gap: 1rem;
    align-items: center;
    justify-content: flex-start;
    padding: 2%;
    color: white;
}

/* Nav Styles */

.navbar {
    background-color: black;
    padding-left: 5%;
    padding-right: 5%;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 100;
}

.logo {
    color: var(--green);
}

.logo > span {
    color: var(--yellow);
}

.nav-link {
    font-size: 1.3rem;
    color: var(--green);
    text-shadow: 1px 1px 0px rgba(255,203,5,0.7);
}

.nav-link:hover {
    color: var(--yellow) !important;
    text-shadow: 1px 1px 0px rgba(0,128,32,0.7);
    text-decoration: underline;
    transition: color 300ms ease-in-out;
}

.navbar-toggler {
    background-color: var(--yellow);
    box-shadow: -2px -2px 4px rgba(255,255,255,0.5),
        2px 2px 4px rgba(70,70,70,0.12);
}

.navbar-toggler:hover {
    background-color: var(--green);
    box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5), 
           inset 2px 2px 4px rgba(70, 70, 70, 0.12);
    display: flex;
    align-items: center;
    justify-content: center;
    transition: all .5s ease-in-out;
    position: relative;
}

.burger-icon {
    width: 2rem;
    height: .3rem;
    background-color: var(--orange);
    border-radius: 5px;
    margin: .55rem 0;
    transition: all .5s ease-in-out;
}

.burger-icon::after,
.burger-icon::before {
    position: absolute;
    content: '';
    width: 2rem;
    height: .3rem;
    border-radius: 5px;
    background-color: var(--orange);
    transition: all .5s ease-in-out;
    opacity: 1 !important;
}

.burger-icon::before {
    transform: translate(-1rem, 0.6rem);
}

 .burger-icon::after {
    transform: translate(-1rem, -0.6rem);
}

.navbar-toggler.open  .burger-icon::before {
    transform: translate(-1rem, 0rem) rotate(-45deg)
}

.navbar-toggler.open  .burger-icon::after {
    transform: translate(-1rem, 0rem) rotate(45deg)
}

.navbar-toggler.open .burger-icon {
    background-color: transparent;
}

/* Message Styles */

.message-container {
    margin-top: 5.5rem;
    width: 100%;
    display: flex;
    align-items: flex-end;
    justify-content: flex-end;
}

.alert .alert-success {
    width: min-content;
}

/* Footer styles */

footer {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    background-color: black;
    padding-bottom: 1rem;
    padding-left: 1rem;
    padding-right: 1rem;
}

.footer-contact {
    display: flex;
    flex-direction: column;
    padding: 2.5% 0 5%;
}

.footer-contact > p {
    color: white;
    margin: 0;
}

.footer-contact > h5 {
    color: white;
}

.footer-nav {
    padding: 2.5% 5% 0 0;
}

.footer-nav > h5 {
    color: white;
    width: 100%;
    text-align: center;
}

.nav-list {
    list-style: none;
}

.nav-list > .nav-item > .nav-link {
    color: white;
    font-size: 1.1rem;
}

.who-we-are {
    padding-top: 2.5%;
    text-align: center;
    color: white;
    height: 100%;
    width: 30%;
}


/* Index stylings  */

.hero-section {
   min-height: 90vh;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 5%;
}

.hero-text-container {
    max-width: 40%;
    animation: fade-in-left 1s ease-in-out;
}

.gallery-link {
    color: var(--yellow);
    text-decoration: none;
    transition: all .3s ease-in-out;
}

.gallery-link:hover{
    color: var(--orange);
}

.price-list-cta {
    background-color: var(--orange-opacity);
    animation: fade-in-right 1s ease-in-out;
}

.price-list-cta > h3 {
    color: black;
}

.our-packages {
    width: 100%;
    margin-bottom: 10rem;
}

.our-packages-heading-div {
    transform: skewY(-5deg);
    background: rgb(0,0,0);
    background: linear-gradient(90deg, rgba(0,0,0,0.43461134453781514) 0%, rgba(0,0,0,1) 25%, rgba(0,1,1,1) 75%, rgba(0,1,1,0.47942927170868344) 100%);
    width: 100%;
}

.our-packages-heading {
    width: 100%;
    color: white;
    margin-bottom: 10rem;
    padding: 4rem;
    text-align: center;
    transform: skewY(5deg);
}

.our-packages-container {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    gap: 1rem;
}

.package-card {
    width: 400px;
}

.package-card > img {
    width: 100%;
    object-fit: cover;
}

/* Modal Styles */ 

.modal-header {
    background-color: var(--green);
}

.modal-header > h5 {
    color: white;
}

.modal-body {
    background-color: black;
    color: white;
}

.modal-footer {
    background-color: var(--yellow);
}

/* Animations */

@keyframes fade-in-left {
    0% {
        opacity: 0%;
        transform: translateX(-200px);
    }
    100% {
        opacity:100%;
        transform: translateX(0px)
    }
}

@keyframes fade-in-right {
    0% {
        opacity: 0%;
        transform: translateX(200px);
    }
    100% {
        opacity:100%;
        transform: translateX(0px)
    }
}

@keyframes fade-up {
    0% {
        opacity: 0%;
        transform: translateY(400px);
    }
    100% {
        opacity:100%;
        transform: translateY(0px)
    }
}

@keyframes scale-left-to-right {
    0% {
        transform: scaleX(0);
        transform-origin: left;
    }
    100% {
        transform: scaleX(1);
    }
}

/* Media Queries */ 

@media (min-width: 992px) {
    .navbar-expand-lg .navbar-nav {
        width: 100%;
        justify-content: flex-end;
    }
}

@media (max-width: 991px) {
    .hero-section {
        flex-direction: column;
        justify-content: space-evenly;
    }
    .hero-text-container {
    max-width: 80%;
    width: auto;
    animation: fade-up 1s ease-in-out;
    }
    .price-list-cta {
        animation: fade-up 1s ease-in-out;
    }
}

@media (max-width: 550px) {
    .hero-section {
        padding-top: 10rem;
        gap: 2rem;
        margin-bottom: 2rem;
    }
    .hero-text-container {
        max-width: 100%;
    }
    footer {
        padding: 0 2%;
        flex-direction: column;
    }
    .footer-contact {
        width: 100%;
    }
    .footer-contact > * {
        text-align: center;
    }
    .footer-nav {
        width: 100%;
    }
    .nav-list > .nav-item > .nav-link {
        text-align: center;
    }
    .who-we-are {
        width: 100%;
    }
}

@media (max-width: 462px) {
    h1.logo {
        font-size: 1.4rem;
    }

}

@media (max-width:350px){
    h1.logo {
        font-size: 1.2rem;
    }
}

